# cairnbooks

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: backend-ci.yml  ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py  0002_company.py  0003_user.py  0005_account.py  0006_journal.py  0007_period.py  0010_item.py  0016_bank.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_tenant.py  0002_company.py  0003_user.py  0005_account.py  0006_period.py  a1b2c3d4e5f6_add_customers_table.py  a3f2e1d0c9b8_add_vendors_table.py  a3f9d2b4e6c1_add_attachments_table.py  b1f11f1309c9_initial.py  f9e1c2a3b5d7_add_companies_table.py
backend/app/: __init__.py  config.py  db.py  main.py  settings.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  health.py
backend/app/db/: __init__.py  mixins.py  session.py
backend/app/domain/: __init__.py  company.py  customer.py  vendor.py
backend/app/models/: __init__.py  account.py  company.py  period.py  role.py  tenant.py  user.py  user_role.py
backend/app/security/: __init__.py  passwords.py
backend/app/services/: __init__.py  coa_seed.py  vendor.py
backend/app/workflow/: __init__.py  attachments.py  customers.py
backend/tests/: __init__.py  test_account_model.py  test_company_model.py  test_customers.py  test_health.py  test_period_model.py  test_smoke.py  test_user_model.py  test_vendor_service.py
backend/tests/workflow/: test_attachments.py
deploy/: .env.example  docker-compose.yml
docs/: architecture-overview.md  architecture.md  deployment.md
docs/architecture/: ADR-0001-stack.md  overview.md
docs/deployment/: backups.md  proxmox.md
frontend/: .env.local.example  Dockerfile  index.html  next.config.ts  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: client.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: RouteGuard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Login.tsx
infra/backups/: backup.env.example  backup.sh  cairnbooks-backup.service  cairnbooks-backup.timer  restore.sh
infra/proxmox/: provision.sh
ops/staging/: provision.md
src/cairnbooks/: __init__.py  app.py  db.py
src/cairnbooks/api/: __init__.py  bank_account.py  health.py  item.py  reports.py
src/cairnbooks/ledger/: __init__.py  period.py  posting.py
src/cairnbooks/models/: __init__.py  account.py  bank_account.py  company.py  item.py  journal.py  period.py  user.py
src/cairnbooks/reports/: __init__.py  trial_balance.py
src/cairnbooks/security/: __init__.py  passwords.py
src/cairnbooks/seed/: __init__.py  coa.py
tests/: test_account.py  test_bank.py  test_company_model.py  test_health.py  test_item_api.py  test_journal_model.py  test_period.py  test_posting_engine.py  test_smoke.py  test_trial_balance.py  test_user.py
web/: .gitignore  index.html  package-lock.json  package.json
web/src/: App.test.tsx  App.tsx  main.tsx
