[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cairnbooks-backend"
version = "0.1.0"
description = "CairnBooks API server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
